--- a/app/globals.css
+++ b/app/globals.css
@@ -4,9 +4,14 @@
 
 
 body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
   /* background: linear-gradient(to top, #537895 0%, #09203f  37%); */
   background: rgb(83,120,149);
   background: linear-gradient(0deg, rgba(83,120,149,1) 0%, rgba(15,47,89,1) 68%, rgba(9,32,63,1) 100%);
   color: #fff;
+
+
 }
 
