--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100vh;
   overflow: hidden;
   /* background: linear-gradient(to top, #537895 0%, #09203f  37%); */
   background: rgb(83,120,149);
